fix(todo): todo items overflowing, page refreshing after adding item.

--- a/apps/todo/src/app/app.component.scss
+++ b/apps/todo/src/app/app.component.scss
@@ -7,10 +7,8 @@
   flex-grow: 1;
 }
 
-.progress-bar {
-  position: fixed;
-  bottom: top;
-  left: 0;
+.progress-bar-container {
+  height: 1rem;
 }
 
 .outlet-container {
